Add comment to application.conf. Update README. Clean up code.

--- a/src/main/scala/application.conf
+++ b/src/main/scala/application.conf
@@ -1,2 +1,4 @@
+// Include either a relative or absolute path in the loadingdock_path variable, with a trailing "/" character.
+// This is where your modules will be placed, executed from, and eventually deleted from.
 loadingdock_path = "loadingdock/"
 
